# swarm

./: .aider.chat.history.md  .aider.input.history
.aider.tags.cache.v4/: cache.db
src/swarm_drone_control/: package.xml  setup.py
src/swarm_drone_control/config/: config.yaml
src/swarm_drone_control/launch/: drone_bringup.launch.py
src/swarm_drone_control/swarm_drone_control/: connect_node.py  gps_utils.py  hub_relay.py  striker_node.py  vision_node.py
src/swarm_formation/: CMakeLists.txt  package.xml
src/swarm_formation/launch/: formation.launch.py
src/swarm_formation/msg/: AgentStatus.msg  AttackCommand.msg  GimbalState.msg  GuiOverlay.msg  MissionState.msg  SwarmCommand.msg  Target.msg  TargetRefined.msg
src/swarm_formation/swarm_formation/: formation_member.py  gps_utils.py  hub_commander.py
src/swarm_ground_stantions/: package.xml  setup.py
src/swarm_ground_stantions/swarm_ground_stantions/: yolo_processor.py
